[tool.poetry]
name = "arturo"
version = "0.1.0"
description = ""
authors = ["RickBarretto <78623871+RickBarretto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
